<resources>
    <string name="app_name">مخدومي</string>
    <string name="class_adding_label">إضافة فصل</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_label">الإسم</string>
    <string name="name_err">يجب إدخال اسم المخدوم!</string>
    <string name="birth_address">محل الميلاد</string>
    <string name="birth_date_label">تاريخ الميلاد</string>
    <string name="birth_location_label">محل الميلاد</string>
    <string name="next_page_label">الصفحة التالية</string>
    <string name="home_num_label">رقم المنزل</string>
    <string name="floor_num_label">رقم الطابق</string>
    <string name="apartment_num_label">رقم الشقة</string>
    <string name="area_name_label">اسم المنطقة</string>
    <string name="street_name_label">اسم الشارع</string>
    <string name="motafre3_from_label">متفرع من</string>
    <string name="another_details_label">تفاصيل أخري</string>
    <string name="father_job_label">وظيفة الأب:</string>
    <string name="mother_job_label">وظيفة الأم:</string>
    <string name="spiritual_father">أب الإعتراف</string>
    <string name="church_label">اسم كنيسة اب الاعتراف</string>
    <string name="is_computer_exist_label">هل يوجد كمبيوتر أو انترنت في المنزل؟</string>
    <string name="positive_radioBtn_label">نعم</string>
    <string name="negative_radioBtn_label">لا</string>
    <string name="hobbies_label">الهدايا و الهوايات المحببة له..</string>
    <string name="health_problems">مشاكله الطبية (اذا وجدت)</string>
    <string name="child_notes_label">ملاحظات علي الطفل و طباعه</string>
    <string name="save_label">حــــــــــفـــــــظ</string>
    <string name="last_page_label">الصفحة السابقة</string>
    <string name="adding_makhdom_label">اضافة مخدوم</string>
    <string name="birth_date_label2">تاريخ الميلاد:</string>
    <string name="birth_location_label2">محل الميلاد:</string>
    <string name="address_label">العنوان:</string>
    <string name="family_label">الأسـرة:</string>
    <string name="family_toolbar_title">بيانات الأسـرة</string>
    <string name="health_toolbar_title">الحالة الجسدية و النفسية</string>
    <string name="brother_toolbar_title">بيانات الأخوة</string>
    <string name="father_job_label2">وظيفة الأب:</string>
    <string name="mother_job_label2">وظيفة الأم:</string>
    <string name="spiritual_father_label2">أب الاعتراف:</string>
    <string name="church_label2">كــنيــسته:</string>
    <string name="hobbies_prizes_label">الهوايات و الهدايا المفضلة:</string>
    <string name="health_problems_label2">مشاكله الصحية ان وجدت:</string>
    <string name="child_notes_label1">ملاحظات علي الطفل و طباعه:</string>
    <string name="computer_dealing_label">مجالات استخدام الطفل له</string>
    <string name="details_update_label">تعــــديـــــل البيــــــانـــــــات</string>
    <string name="phone_num_label">رقم الموبايل</string>
    <string name="phone_owner_label">صاحب الموبايل</string>
    <string name="adding_another_phone_label">اضافة رقم اخر</string>
    <string name="save_phone_label">حفظ الرقم</string>
    <string name="phone_empty_error_msg">يجب إدخال رقم الموبايل!</string>
    <string name="phone_wrong_err_msg">رقم الموبايل خاطيء.</string>
    <string name="phone_label">الموبايل:</string>
    <string name="phone_toolbar_title">الموبايل</string>
    <string name="basic_data_label">المعلومات الأساسية:</string>
    <string name="basic_data_toolbar_title">المعلومات الأساسية</string>
    <string name="spirit_label">الإعتراف:</string>
    <string name="spirit_toolbar_title">الإعتراف</string>
    <string name="media_label">الميديا:</string>
    <string name="media_toolbar_title">الميديا</string>
    <string name="computer_fields_label">مجالات استخدام الطفل له:</string>
    <string name="health_label">الصحة:</string>
    <string name="health_toolbar_label">الصحة</string>
    <string name="save_exit_label">حفظ و خروج</string>
    <string name="class_label">المرحــلـــة</string>
    <string name="inavailable_msg">غير متاح!</string>
    <string name="map_axis_label">وضع الأحداثيات</string>
    <string name="latitude_label">خط الطول</string>
    <string name="longitude_label">خط العرض</string>
    <string name="automatic_gps_label">استخدم موقعك تلقائيا</string>
    <string name="latitude_err_msg">يجب إدخال خط الطول</string>
    <string name="longitude_err_msg">يجب إدخال خط العرض</string>
    <string name="location_added_succesfully_msg">تم اضافة الاحداثيات بنجاح</string>
    <string name="class_name_err_msg">يجب إدخال اسم المرحلة!</string>
    <string name="map_is_notavaialbe_msg">العنوان غير متاح علي الخريطة</string>
    <string name="phone_added_successfully_msg">تمت اضافة الموبايل بنجاح</string>
    <string name="khadem_name">اسـم الخـادم</string>
    <string name="preferences_file_key">preferences_file_key</string>
    <string name="phone_num">رقم الموبايل</string>
    <string name="verify_label">تأكيد</string>
    <string name="otp_err_msg">الكود الذي أدخلته خاطيء!</string>
    <string name="signed_in_successfully">تم التسجيل بنجاح</string>
    <string name="internet_err_msg">يوجد خطأ، تأكد من اتصالك بالانترنت</string>
    <string name="khadem_key">khadem_key</string>
    <string name="enter_code_description">قم بادخال الكود الذي تم ارساله لك علي الرقم</string>
    <string name="resend_otp_label">إرسال الكود مرة أخري</string>
    <string name="my_makhdom_label">مخـــدومــي</string>
    <string name="enter_code_msg">يجب إدخال الكود!</string>
    <string name="enter_code_msg2">يجب إدخال الكود بشكل سليم!</string>
    <string name="try_again_msg">حاول في وقت لاحق</string>
    <string name="choose_phone_label">اختار الرقم :</string>
    <string name="internet_error_message">تأكد من الاتصال بالانترنت</string>
    <string name="resama_date_label">تاريخ الرسامة</string>
    <string name="not_exist_label">لا يوجد</string>
    <string name="not_phone_exist_label">لا يوجد أي رقم تليفون للمخدوم!</string>
    <string name="brother_name_label">الأســم</string>
    <string name="age_label">الـسـن</string>
    <string name="study_label">الدراسة</string>
    <string name="type_label">الــنوع</string>
    <string name="brother_name_err_msg">يجب إدخال الاسم!</string>
    <string name="brother_data_addess_succssfully_msg">تم إضافة البيانات بنجاح</string>
    <string name="brothers_label">الأخــوة:</string>
    <string name="address_toolbar_title">العنوان</string>
    <string name="details_toolbar_title">بيانات المخدوم</string>
    <string name="confirmation_toolbar_title">تأكــيد</string>
    <string name="family_life_level_label">المستوي المادي للأسرة:</string>
    <string name="family_attitude_label">مدي ترحيب الأسرة بأخر زيارة:</string>
    <string name="family_church_connection_label">ارتباط الأسرة بالكنيسة:</string>
    <string name="another_notes_label">ملاحظات اخري:</string>
    <string name="gmail_label">البريد الإلكتروني</string>
    <string name="password_label">الرقم السري</string>
    <string name="password_confirmation_label">تأكيد الرقم السري</string>
    <string name="khadem_code_label">كود الخادم</string>
    <string name="login_label">تسجيل دخول</string>
    <string name="new_account_label">عمل حساب جديد</string>
    <string name="start_label">دخــول</string>
    <string name="auth_err_msg">هناك مشكلةِ ما. تأكد من اتصالك بالإنترنت! و تأكد ألا يكون بريدك الالكتروني مستخدم من قبل!</string>
    <string name="email_err_msg">يجب ادخال بريدك الإلكتروني!</string>
    <string name="not_correct_email_msg">البريد الإلكتروني غير صحيح!</string>
    <string name="password_err_msg">يجب ادخال الرقم السري!</string>
    <string name="wrong_email_or_password_err">هناك مشكلةِ ما. تأكد من البريد الإلكتروني أو الرقم السري، وتأكد من اتصالك بالإنترنت!</string>
    <string name="server_data_receive_title">استقبال البيانات من السيرفر</string>
    <string name="server_data_receive_message">هل تريد استقبال البيانات من السيرفر وتخزينها علي جهازك؟</string>
    <string name="forget_password_label">نسيت الرقم السري؟</string>
    <string name="have_account_text">لديك حساب؟</string>
    <string name="password_reset_text">تغيير الرقم السري</string>
    <string name="email_reset_link_instruction">سيتم إرسال لينك الى بريدك الإلكتروني لتغيير الرقم السري</string>
    <string name="reset_link_sent_msg">تم ارسال لينك الي بريدك الالكتروني بنجاح</string>
    <string name="reset_link_err">تأكد من البريد الالكتروني أو من اتصالك بالشبكة</string>
    <string name="dont_have_account_label">ليس لديك حساب؟</string>
    <string name="cancel_label">إلغاء</string>
    <string name="ok_label">تأكيد</string>
    <string name="log_out_dialog_msg">هل تريد الخروج من حسابك؟</string>
    <string name="log_out_dialog_title">خروج</string>
    <string-array name="classes_names">
        <item>اولى ابتدائي</item>
        <item>ثانية ابتدائي</item>
        <item>ثالثة ابتدائي</item>
        <item>رابعة ابتدائي</item>
        <item>خامسة ابتدائي</item>
        <item>سادسة ابتدائي</item>
        <item>اولى اعدادي</item>
        <item>ثانية اعدادي</item>
        <item>ثالثة اعدادي</item>
        <item>ثانوي</item>
    </string-array>

    <string-array name="brother_types">
        <item>أخ</item>
        <item>أخت</item>
    </string-array>

    <string-array name="life_levels">
        <item>منخفض جدا</item>
        <item>منخفض</item>
        <item>متوسط</item>
        <item>فوق المتوسط</item>
        <item>مرتفع</item>
    </string-array>
</resources>