<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:padding="@dimen/_20sdp"
            tools:context=".presentation.makhdommen_screen.MediaAndHobbiesMakhdomFragment">

            <TextView
                android:id="@+id/is_computer_exist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/is_computer_exist_label"
                android:textSize="@dimen/large"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/_10sdp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/is_computer_exist">

                <RadioButton
                    android:id="@+id/positive_radio_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/positive_radioBtn_label"
                    android:textStyle="bold" />

                <RadioButton
                    android:id="@+id/negative_radio_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_40sdp"
                    android:text="@string/negative_radioBtn_label"
                    android:textStyle="bold" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/hobbies_field"
                android:layout_width="0dp"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_40sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/radio_group">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:hint="@string/hobbies_label"
                    android:inputType="textMultiLine" />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/next_page_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="@dimen/_40sdp"
                android:text="@string/next_page_label"
                android:textSize="@dimen/small"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/last_page_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/health_problems_field" />

            <Button
                android:id="@+id/last_page_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_10sdp"

                android:backgroundTint="@color/grey"
                android:text="@string/last_page_label"
                android:textSize="@dimen/small"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/next_page_btn"
                app:layout_constraintTop_toTopOf="@+id/next_page_btn" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>