<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_20sdp">

            <TextView
                android:id="@+id/password_reset_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_reset_text"
                android:textColor="@color/blue"
                android:textSize="@dimen/small"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                app:helperTextEnabled="true"
                app:helperTextTextColor="@color/red"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/password_reset_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/gmail_label"
                    android:inputType="textEmailAddress"
                   />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/send_email_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="@dimen/_15sdp"
                android:backgroundTint="@color/blue"
                android:text="@string/ok_label"
                android:textSize="@dimen/medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/cancel_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/email_field" />

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="@dimen/_15sdp"
                android:backgroundTint="@color/grey"
                android:text="@string/cancel_label"
                android:textSize="@dimen/medium"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="@dimen/_15sdp"
                app:layout_constraintStart_toEndOf="@id/send_email_btn"
                app:layout_constraintTop_toBottomOf="@id/email_field" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/email_reset_link_instruction"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/send_email_btn" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/send_email_btn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/send_email_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>