<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="address"
            type="com.khedma.makhdomy.domain.model.Address" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layoutDirection="rtl"
            android:paddingTop="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp"
            android:paddingStart="@dimen/_45sdp"
            android:paddingEnd="@dimen/_45sdp"
            android:background="@color/light_blue"
            tools:context=".presentation.makhdommen_screen.AddressMakhdomFragment">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/home_num_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/home_num_label"
                    android:inputType="number"
                    android:text="@{address.homeNum}"
                    android:textSize="@dimen/medium" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/floor_num_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_17sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/home_num_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/floor_num_label"
                    android:inputType="number"
                    android:text="@{address.floorNum}"
                    android:textSize="@dimen/medium" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/apartment_num_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_17sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/floor_num_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apartment_num_label"
                    android:inputType="number"
                    android:text="@{address.apartmentNum}"
                    android:textSize="@dimen/medium" />


            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/area_name_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_17sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/apartment_num_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/area_name_label"
                    android:inputType="text"
                    android:text="@{address.areaName}"
                    android:textSize="@dimen/medium" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/street_name_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_17sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/area_name_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/street_name_label"
                    android:inputType="text"
                    android:text="@{address.streetName}"
                    android:textSize="@dimen/medium" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/motfare3_street_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_17sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/street_name_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/motafre3_from_label"
                    android:inputType="text"
                    android:text="@{address.motafre3From}"
                    android:textSize="@dimen/medium" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/other_address_details_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_17sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/motfare3_street_field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/another_details_label"
                    android:inputType="text"
                    android:maxLines="2"
                    android:text="@{address.anotherAddressData}"
                    android:textSize="@dimen/medium" />


            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/get_location_axis_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="@dimen/_17sdp"
                android:text="@string/map_axis_label"
                android:textSize="@dimen/medium"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:backgroundTint="@color/light_grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/other_address_details_field" />


            <Button
                android:id="@+id/next_page_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:text="@string/next_page_label"
                android:textSize="@dimen/small"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/last_page_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/get_location_axis_btn" />

            <Button
                android:id="@+id/last_page_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_marginStart="@dimen/_5sdp"
                android:backgroundTint="@color/grey"
                android:text="@string/last_page_label"
                android:textSize="@dimen/small"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/next_page_btn"
                app:layout_constraintTop_toTopOf="@+id/next_page_btn" />
            <Button
                android:id="@+id/save_exit_btn"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="@dimen/_30sdp"
                android:text="@string/save_exit_label"
                android:textSize="@dimen/medium"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/next_page_btn" />



        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>
